<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Check My Health</string>
    <string name="textview">Check My health</string>
    <string name="version_1_0_0">Version 2.0.0</string>
    <string name="todo">TODO</string>
    <string name="inndice_de_masse_de_graisse">INNDICE DE MASSE DE GRAISSE</string>
    <string name="todo1" tools:ignore="DuplicateDefinition">TODO1</string>
    <string name="historique">Historique</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="historique1">HISTORIQUE</string>
    <string name="indice_de_masse_de_graisse">INDICE DE MASSE DE GRAISSE</string>


</resources>
